--- a/index.html
+++ b/index.html
@@ -1,60 +1,25 @@
-<!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css"/>
+  <title>Tin Hoc</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-<table border="1" style="width: 100%" height="300px">
-  <tr height="40px">
-     <td 
-   colspan="2"Ibgcolor="DodgerBlue">
-     HƯỚNG NGHIỆP CÔNG NGHỆ THÔNG TIN
-     </td>
-  </tr>
-  <td width="30%">
-    <ul>
-      <li>Bài tập</li>
-      <ol>
-        <li> 
-          <a href="Contents/gioithieu.html" target="noidung">Giới thiệu
-          </a> 
-        </li>    
-      <li>
-       <a 
-href="Contents/tkb.html" target="noidung">Thời khoá biểu
-        </a>
-      </li>
-        <li>
-        <a
-href="Contents/cntt.html" target="noidung">Hướng nghiệp
-        </a>
-        </li>
-        <li>
-        <a
-href="Contents/cybersecurity.html" target="noidung">An toàn thông tin
-        </a>
-        </li>
-      </ol>
-      
-      <li> Tài liệu tham khảo </li>
-     <a href="https://www.w3schools.com/html/" target="noidung">w3schools.com</a>
-    <a
-href="https://htmlcolorcodes.com/" target="noidung">htmlcolorcodes.com
-    </a>
-    </ul>
-    
-
-   <br>
-
-  </td>
-  <td width="70%">
-     <iframe name="noidung" width="100%" height="100%"  frameborder="1"></iframe>
-  </td>
-</table>
+  <div class="header">
+    SHADOW GARDEN 
+  </div>
+  <div class="menu">
+    <a href= "images/gioithieu.html" target="nd"> Gioi Thieu</a>
+    <a href= "images/form.html" target="nd">Y Kien</a>
+    <a href= "images/huong nghiep.html" target="nd"> Huong Nghiep</a>
+    <a href= "images/tkb.html" target="nd"> tkb</a>
+  </div>
+   <div class="noidung"> <p> NOI DUNG </p>
+   <iframe name="nd" width= "125%" height= "500px"
+       frameborder= "0" </iframe>
+   </div>
 </body>
-
+  
 </html>
